<resources>
    <string name="app_name">VoiceBox</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_login">log in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="vb_logo">V | B</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pool_example_description">The pool is only open until Saturday at noon. This makes it really inconvenient for some of us to ever use it, because we are never available when it is open. We would like the city to extend the pool hours so that it doesn\'t close until Saturday evening.</string>
    <string name="pool_example_title">Open rec center swimming pool on Saturday evenings</string>
    <string name="expand_description_icon">+</string>
    <string name="picture_description">Profile picture of the commenter</string>
    <string name="jimmers_comment">I think that\'s a great idea! Saturday evenings are the only time I can take my kids to play in the pool.</string>
    <string name="jimmer_name">Jimmer Fredette</string>
    <string name="donalds_comment">Oh boy oh boy oh boy! Daisy and I love any chance to play in the water more!</string>
    <string name="donald_name">Donald Duck</string>
    <string name="plus_one">+1</string>
    <string name="share_button">Share an idea</string>
    <string name="contribute_button">Contribute to this cause</string>
    <string name="add_comment_button_label">Add a Comment</string>
</resources>
