<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.josepher.voicebox.SummaryFragment"
    android:paddingTop="@dimen/bottom_button_bar_height">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="464dp"
        android:layout_gravity="top|center"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/pool_example_title"
                android:id="@+id/idea_summary"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="30sp"
                android:gravity="center_vertical|center_horizontal"
                android:layout_margin="5sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pool_example_description"
                android:id="@+id/idea_description"
                android:layout_gravity="center_horizontal"
                android:maxHeight="75dp"
                android:layout_margin="5sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/expand_description_icon"
                android:id="@+id/expand_idea_description_button"
                android:textStyle="bold"
                android:gravity="center_vertical|fill_vertical|center_horizontal"
                android:allowUndo="true"
                android:padding="2dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:weightSum="1"
                android:minHeight="65dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="65dp"
                    android:layout_height="match_parent"
                    android:foregroundGravity="fill_vertical"
                    android:weightSum="1">

                    <ImageButton
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:id="@+id/commentProfileImage"
                        android:contentDescription="@string/picture_description" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/jimmers_comment"
                        android:id="@+id/comment" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="20dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/jimmer_name"
                        android:id="@+id/commenterName"
                        android:layout_gravity="center_horizontal"
                        android:minHeight="20dp"
                        android:minLines="1"
                        android:maxHeight="20dp"
                        android:gravity="center_vertical|right" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:weightSum="1"
                android:minHeight="65dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="65dp"
                    android:layout_height="match_parent"
                    android:foregroundGravity="fill_vertical"
                    android:weightSum="1">

                    <ImageButton
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:id="@+id/commentProfileImage2"
                        android:contentDescription="@string/picture_description" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/donalds_comment"
                        android:id="@+id/comment2" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="20dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/donald_name"
                        android:id="@+id/commenterName2"
                        android:layout_gravity="center_horizontal"
                        android:minHeight="20dp"
                        android:minLines="1"
                        android:maxHeight="20dp"
                        android:gravity="center_vertical|right" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <Button
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:text="+"
            android:id="@+id/in_favor_button"
            android:background="#64DD17" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/share_button"
            android:id="@+id/general_action_button"
            android:layout_weight="1.14"
            android:background="#757575" />

        <Button
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:text="-"
            android:id="@+id/not_in_favor_button"
            android:background="#E65100" />
    </LinearLayout>

</FrameLayout>
