<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ideaPool.SummaryFragmentPool">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/pool_example_title"
                android:id="@+id/idea_summary"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="25sp"
                android:gravity="center_vertical|center_horizontal"
                android:layout_margin="5sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pool_example_description"
                android:id="@+id/idea_description"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5sp"
                android:ellipsize="end"
                android:lines="3" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="24sp"
                android:layout_margin="5sp"
                android:layout_marginBottom="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="3,451 In Favor"
                    android:id="@+id/textView8"
                    android:textColor="@color/accentGreen"
                    android:layout_gravity="center"
                    android:layout_weight=".5"
                    android:textStyle="bold"
                    android:gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="4 Not In Favor"
                    android:id="@+id/textView9"
                    android:textColor="@color/accentRed"
                    android:layout_gravity="center|right"
                    android:layout_weight=".5"
                    android:textStyle="bold"
                    android:gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:weightSum="1"
                android:minHeight="65dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="65dp"
                    android:layout_height="match_parent"
                    android:foregroundGravity="fill_vertical"
                    android:weightSum="1">

                    <ImageButton
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:id="@+id/commentProfileImage"
                        android:contentDescription="@string/picture_description"
                        android:src="@mipmap/jimmer"
                        android:scaleType="fitXY"
                        android:padding="0dp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/jimmers_comment"
                        android:id="@+id/comment"
                        android:ellipsize="end"
                        android:clickable="true" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="20dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/jimmer_name"
                        android:id="@+id/commenterName"
                        android:layout_gravity="center_horizontal"
                        android:minHeight="20dp"
                        android:minLines="1"
                        android:maxHeight="20dp"
                        android:gravity="center_vertical|right" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:weightSum="1"
                android:minHeight="65dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="65dp"
                    android:layout_height="match_parent"
                    android:foregroundGravity="fill_vertical"
                    android:weightSum="1">

                    <ImageButton
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:id="@+id/commentProfileImage2"
                        android:contentDescription="@string/picture_description"
                        android:src="@mipmap/donald_duck"
                        android:scaleType="fitXY"
                        android:padding="0dp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/donalds_comment"
                        android:id="@+id/comment2" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="20dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/donald_name"
                        android:id="@+id/commenterName2"
                        android:layout_gravity="center_horizontal"
                        android:minHeight="20dp"
                        android:minLines="1"
                        android:maxHeight="20dp"
                        android:gravity="center_vertical|right" />

                </LinearLayout>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_comment_button_label"
                android:id="@+id/comment_button" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
